objects/Feed__c.object
<CustomObject>
    <fields>
        <fullName>Execution_Requested__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Populated via VF page at user request</description>
        <inlineHelpText>Populated via VF page at user request</inlineHelpText>
        <label>Feed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Feed_Date_Temp__c</fullName>
        <label>Feed Date (Only for developer Use)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feed_Group__c</fullName>
        <description>Identifier for a collection of Feeds</description>
        <inlineHelpText>Identifier for a collection of Feeds</inlineHelpText>
        <label>Feed Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Identifier__c</fullName>
        <description>The key identifier for the underlying Transactions</description>
        <inlineHelpText>The key identifier for the underlying Transactions</inlineHelpText>
        <label>Feed Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Items__c</fullName>
        <description>COUNT of FeedItem</description>
        <inlineHelpText>COUNT of FeedItem</inlineHelpText>
        <label>Feed Items</label>
        <summaryForeignKey>Feed_Item__c.Feed_Identifier__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On demand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Output_Delimiter__c</fullName>
        <description>If File type = “Text”, the delimiter to use</description>
        <inlineHelpText>If File type = “Text”, the delimiter to use</inlineHelpText>
        <label>Output – Delimiter</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_File_Type__c</fullName>
        <description>The internally formatted data typing</description>
        <inlineHelpText>The internally formatted data typing</inlineHelpText>
        <label>Output - File Type</label>
        <picklist>
            <picklistValues>
                <fullName>CSV</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Output_Filename__c</fullName>
        <description>The full name of the file to be produced</description>
        <inlineHelpText>The full name of the file to be produced</inlineHelpText>
        <label>Output - Filename</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pre_SP__c</fullName>
        <description>The name of a customized stored procedure to be executed pre-processing</description>
        <inlineHelpText>The name of a customized stored procedure to be executed pre-processing</inlineHelpText>
        <label>Pre-SP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Transactions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies where to look for transactions that cannot be replicated to SFDC</description>
        <inlineHelpText>Identifies where to look for transactions that cannot be replicated to SFDC</inlineHelpText>
        <label>Private Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP__c</fullName>
        <description>The name of a customized stored procedure to be executed post-processing</description>
        <inlineHelpText>The name of a customized stored procedure to be executed post-processing</inlineHelpText>
        <label>SP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The order of execution among all identified feeds</description>
        <inlineHelpText>The order of execution among all identified feeds</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Feed</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feeds</pluralLabel>
    <recordTypes>
        <fullName>Crediting</fullName>
        <active>true</active>
        <label>Crediting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>System</fullName>
        <active>true</active>
        <label>System</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transaction</fullName>
        <active>true</active>
        <label>Transaction</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Delimiter_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	ISPICKVAL(Output_File_Type__c, &quot;Text&quot;), 
	ISBLANK( Output_Delimiter__c )
)</errorConditionFormula>
        <errorDisplayField>Output_Delimiter__c</errorDisplayField>
        <errorMessage>You must indicate the delimiter when select Text as the output</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_sequence</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Sequence__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Sequence__c</errorDisplayField>
        <errorMessage>The Sequence must be greater than zero</errorMessage>
    </validationRules>
</CustomObject>